<resources>
    <string name="app_name">Lorem Generator</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
        velit esse cillum dolore eu fugiat  nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string-array name="lorem_types">
        <item>Lorem Ipsum</item>
        <item>Cupcake Ipsum</item>
        <item>Samuel L Ipsum</item>
    </string-array>
    <string name="creator_fill">Created By Nicholas</string>
    <string name="button">Button</string>
    <string name="creator_text">Created By Nicholas</string>
</resources>
