<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name='loremIpsum'
            type="com.github.thenicholaschen.newproject.Ipsum"/>
        <variable
            name='cupcakeIpsum'
            type="com.github.thenicholaschen.newproject.Ipsum"/>
        <variable
            name='samuelLIpsum'
            type="com.github.thenicholaschen.newproject.Ipsum"/>
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding">


    <TextView
        android:id="@+id/titleText"
        style="@style/text_styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/creator_fill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/creator_fill"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/lorem_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/creator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/creator_text"
        style="@style/text_styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/creator_text"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_margin">

        <TextView
            android:id="@+id/lorem_text"
            style="@style/text_styles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/lorem_text" />
    </ScrollView>


    </LinearLayout>
</layout>